--- a/backend/.env
+++ b/backend/.env
@@ -12,8 +12,8 @@ DB_PORT=5432                 # بورت قاعدة البيانات (مثال ل
 DB_USER=username             # اسم المستخدم لقاعدة البيانات
 DB_PASSWORD=password         # كلمة السر لقاعدة البيانات
 DB_NAME=your_database_name   # اسم قاعدة البيانات
-MONGO_URI=mongodb+srv://ahmedabuayoub2:Jihad1996@cluster0.cldqj.mongodb.net//<database>?retryWrites=true&w=majority
-PORT=5000
+mongodb+srv://ahmedabuayoub2:Jihad1996@cluster0.cldqj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5001
 
 # -------------------------------
 # API Keys (Third-Party Integrations)
