--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,40 @@
 {
     "configurations": [
         {
+            "type": "node",
+            "request": "launch",
+            "name": "Run jest",
+            "runtimeExecutable": "jest",
+            "cwd": "${workspaceFolder}/backend",
+            "args": []
+        },
+        {
+            "command": "npm start",
+            "name": "Run npm start",
+            "request": "launch",
+            "type": "node-terminal"
+        },
+        {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Launch via NPM",
+            "request": "launch",
+            "runtimeArgs": [
+                "run-script",
+                "debug"
+            ],
+            "runtimeExecutable": "npm",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+        {
             "type": "node-terminal",
             "name": "Run Script: start",
             "request": "launch",
