--- a/backend/.env
+++ b/backend/.env
@@ -7,13 +7,7 @@ HOST=127.0.0.1               # عنوان السيرفر (لو شغال على l
 # -------------------------------
 # Database Configuration
 # -------------------------------
-#DB_HOST=localhost            # عنوان قاعدة البيانات
-#DB_PORT=5432                 # بورت قاعدة البيانات (مثال لـ PostgreSQL)
-#DB_USER=username             # اسم المستخدم لقاعدة البيانات
-#DB_PASSWORD=password         # كلمة السر لقاعدة البيانات
-#DB_NAME=your_database_name   # اسم قاعدة البيانات
-#mongodb+srv://ahmedabuayoub2:Jihad1996@cluster0.cldqj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-#PORT=5001
+MONGO_URI=mongodb://localhost:27017/footechDB  # رابط الاتصال بقاعدة البيانات (تأكد من التعديل بحسب حالتك)
 
 # -------------------------------
 # API Keys (Third-Party Integrations)
